--- a/package.json
+++ b/package.json
@@ -1,50 +1,29 @@
 {
   "name": "snafu",
   "productName": "Snafu",
-  "version": "0.0.0",
-  "description": "My striking app",
+  "version": "0.0.1",
+  "description": "a SNAFU comic downloader",
   "license": "MIT",
   "repository": "Triktron/snafu",
-  "desktopName": "snafu",
+
   "author": {
     "name": "triktron",
     "email": "ele.trik@hotmail.com",
     "url": "triktron.github.io"
   },
-  "scripts": {
-    "test": "xo",
-    "start": "electron .",
-    "build": "electron-packager . --out=dist --asar --overwrite --all"
-  },
+
   "files": [
     "index.js",
     "index.html",
-    "index.css"
+    "index.css",
+    "jszip.min.js",
+    "filer.min.js"
   ],
   "keywords": [
-    "electron-app",
-    "electron"
+    "SNAFU", "Downloader"
   ],
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "electron": "^1.4.12",
-    "electron-debug": "^1.1.0",
-    "electron-packager": "^8.4.0",
-    "fs-extra": "^1.0.0",
-    "request": "^2.79.0",
-    "request-progress": "^3.0.0"
-  },
-  "devDependencies": {
-    "devtron": "^1.1.0",
-    "electron-packager": "^8.0.0",
-    "electron": "^1.3.3",
-    "xo": "^0.16.0"
-  },
-  "xo": {
-    "esnext": true,
-    "envs": [
-      "node",
-      "browser"
-    ]
+    "filer.js": "^0.4.5",
+    "jszip": "^3.1.3",
   }
 }
